# gameengine

./: Cargo.toml
src/: app.rs  main.rs
src/engine/: game.rs  input.rs  mod.rs
src/engine/ecs/: mod.rs  world.rs
src/engine/ecs/component/: mod.rs
src/engine/math/: mod.rs
src/engine/render/: mod.rs  rect.rs  renderer.rs  triangle.rs
src/engine/resource/: mod.rs
src/games/tetris/: game.rs  mod.rs  tetromino.rs
