[package]
name = "gameengine"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
glam = "0.30.8"
log = "0.4.28"
palette = { version = "0.7.6", features = ["named"] }
softbuffer = "0.4.6"
thiserror = "2.0.17"
winit = "0.30.12"
rand = "0.9.2"
matches = "0.1.10"
serde = { version = "1.0.228", features = ["derive"] }
